force-app/main/default/objects/Order/fields/Maps_Route__c.field-meta.xml
<CustomField>
    <fullName>Maps_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Route</label>
    <referenceTo>maps__Route__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>