force-app/main/default/objects/Order/fields/Needs_Supply_Chain_Attention__c.field-meta.xml
<CustomField>
    <fullName>Needs_Supply_Chain_Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Supply Chain Attention?</label>
    <type>Checkbox</type>
</CustomField>