force-app/main/default/objects/Order/fields/Number_of_Order_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Order_Products__c</fullName>
    <label>Number of Order Products</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>