force-app/main/default/objects/Order/fields/OK_or_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>OK_or_Cancelled__c</fullName>
    <label>OK or Cancelled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
                <default>true</default>
                <label>OK</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>