force-app/main/default/objects/Order/fields/On_site_Contact__c.field-meta.xml
<CustomField>
    <fullName>On_site_Contact__c</fullName>
    <label>On-site Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>