force-app/main/default/objects/Order/fields/Ops_Priority__c.field-meta.xml
<CustomField>
    <fullName>Ops_Priority__c</fullName>
    <label>Ops Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer moving out/New customer</fullName>
            </value>
            <value>
                <fullName>Older than 5 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>