force-app/main/default/objects/Order/fields/Optimizely_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Optimizely_Transaction_ID__c</fullName>
    <label>Optimizely Transaction ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>