force-app/main/default/objects/Order/fields/Order2_ID__c.field-meta.xml
<CustomField>
    <fullName>Order2_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id from Order2 that created this order</description>
    <label>Order2 ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>