force-app/main/default/objects/Order/fields/Order2CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Order2CaseSafeID__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order2CaseSafeID</label>
    <type>Text</type>
</CustomField>