force-app/main/default/objects/Order/fields/Order_Amount_inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_inc_VAT__c</fullName>
    <formula>TotalAmount + VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>