force-app/main/default/objects/Order/fields/Order_Category__c.field-meta.xml
<CustomField>
    <fullName>Order_Category__c</fullName>
    <formula>IF(Clearance_Order__c, &quot;Clearances&quot;, 
   IF(IsBinCollection__c , &quot;Scheduled&quot;, &quot;PAYG Bags&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Category</label>
    <type>Text</type>
</CustomField>