force-app/main/default/objects/Order/fields/Order_one_field__c.field-meta.xml
<CustomField>
    <fullName>Order_one_field__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order (one field)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>