force-app/main/default/objects/Order/fields/Order_Placed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Placed_Date__c</fullName>
    <defaultValue>IF(
WEEKDAY(TODAY())&gt;1 &amp;&amp; WEEKDAY(TODAY())&lt;7, TODAY(), IF(WEEKDAY(TODAY())=1, TODAY()+1, TODAY()+2)      
)</defaultValue>
    <label>Order Placed Date</label>
    <type>Date</type>
</CustomField>