force-app/main/default/objects/Order/fields/Order_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Signed_By__c</fullName>
    <label>Order Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>