force-app/main/default/objects/Order/fields/Orderer_Name__c.field-meta.xml
<CustomField>
    <fullName>Orderer_Name__c</fullName>
    <inlineHelpText>This field is used in the Supplier App.</inlineHelpText>
    <label>Orderer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>