force-app/main/default/objects/Order/fields/OrderProductsByExternalCarrier__c.field-meta.xml
<CustomField>
    <fullName>OrderProductsByExternalCarrier__c</fullName>
    <label>Order Products by External Carrier</label>
    <summaryFilterItems>
        <field>OrderItem.IsDeliveryByExternalCarrier__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>