force-app/main/default/objects/Order/fields/OrderProductsOnVariableBilling__c.field-meta.xml
<CustomField>
    <fullName>OrderProductsOnVariableBilling__c</fullName>
    <label>Order Products on Variable Billing</label>
    <summaryFilterItems>
        <field>OrderItem.IsVariableBilling__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>