force-app/main/default/objects/Order/fields/OrderProductsToChargeVariableWeight__c.field-meta.xml
<CustomField>
    <fullName>OrderProductsToChargeVariableWeight__c</fullName>
    <label>Order Products to Charge Variable Weight</label>
    <summaryFilterItems>
        <field>OrderItem.IsChargeVariableWeight__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>