force-app/main/default/objects/Order/fields/OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>OrderSummary__c</fullName>
    <label>OrderSummary - DO NOT USE</label>
    <type>TextArea</type>
</CustomField>