force-app/main/default/objects/Order/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <formula>Account.Partnership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner ID</label>
    <type>Text</type>
</CustomField>