force-app/main/default/objects/Order/fields/Partner_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Total_Amount__c</fullName>
    <label>Partner Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>