force-app/main/default/objects/Order/fields/PartnerInvoice__c.field-meta.xml
<CustomField>
    <fullName>PartnerInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Invoice</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Orders (Monthly Partner Invoice)</relationshipLabel>
    <relationshipName>OrdersPartner</relationshipName>
    <type>Lookup</type>
</CustomField>