force-app/main/default/objects/Order/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <formula>PaymentReference__c</formula>
    <label>Payment Reference</label>
    <type>Text</type>
</CustomField>