force-app/main/default/objects/Order/fields/PaymentUrl__c.field-meta.xml
<CustomField>
    <fullName>PaymentUrl__c</fullName>
    <label>Payment URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>