force-app/main/default/objects/Order/fields/PeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>PeriodEnd__c</fullName>
    <label>Period End</label>
    <type>Date</type>
</CustomField>