force-app/main/default/objects/Order/fields/PeriodStart__c.field-meta.xml
<CustomField>
    <fullName>PeriodStart__c</fullName>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>