force-app/main/default/objects/Order/fields/PO_for_Supplier__c.field-meta.xml
<CustomField>
    <fullName>PO_for_Supplier__c</fullName>
    <displayFormat>PO-{000000}</displayFormat>
    <inlineHelpText>This field is used in the Supplier App.</inlineHelpText>
    <label>PO for Supplier</label>
    <type>AutoNumber</type>
</CustomField>