force-app/main/default/objects/Order/fields/POD_Address__c.field-meta.xml
<CustomField>
    <fullName>POD_Address__c</fullName>
    <label>POD Address</label>
    <type>TextArea</type>
</CustomField>