force-app/main/default/objects/Order/fields/POD_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>POD_Delivery_Date__c</fullName>
    <label>POD Delivery Date</label>
    <type>Date</type>
</CustomField>