force-app/main/default/objects/Order/fields/POD_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>POD_Geolocation__c</fullName>
    <label>POD Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>