force-app/main/default/objects/Order/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>