force-app/main/default/objects/Order/fields/Quantity_roll_up__c.field-meta.xml
<CustomField>
    <fullName>Quantity_roll_up__c</fullName>
    <label>Quantity roll up</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>