force-app/main/default/objects/Order/fields/Real_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Real_Created_By__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Created By</label>
    <type>Text</type>
</CustomField>