force-app/main/default/objects/Order/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <label>reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>