force-app/main/default/objects/Order/fields/RecurringId__c.field-meta.xml
<CustomField>
    <fullName>RecurringId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring</label>
    <referenceTo>Recurrings__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>