force-app/main/default/objects/Order/fields/Recycled_KG__c.field-meta.xml
<CustomField>
    <fullName>Recycled_KG__c</fullName>
    <label>Recycled KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>