force-app/main/default/objects/Order/fields/RecycleIdProducts__c.field-meta.xml
<CustomField>
    <fullName>RecycleIdProducts__c</fullName>
    <label>Recycle Id Products</label>
    <summaryFilterItems>
        <field>OrderItem.RecycleIdProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>