force-app/main/default/objects/Order/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <defaultValue>IF(
WEEKDAY(TODAY()+1)&gt;1 &amp;&amp; WEEKDAY(TODAY()+1)&lt;7, TODAY()+1, IF(WEEKDAY(TODAY()+1)=1, TODAY()+2, TODAY()+3)
)</defaultValue>
    <inlineHelpText>This field is used in the Supplier App.</inlineHelpText>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>