force-app/main/default/objects/Order/fields/RequestedDateDays__c.field-meta.xml
<CustomField>
    <fullName>RequestedDateDays__c</fullName>
    <formula>Requested_Delivery_Date__c-today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestedDateDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>