force-app/main/default/objects/Order/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the round allocated.</description>
    <label>Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>