force-app/main/default/objects/Order/fields/Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Number__c</fullName>
    <description>Round Number from Enqix system</description>
    <inlineHelpText>Round Number from Enqix system</inlineHelpText>
    <label>Round Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>