force-app/main/default/objects/Order/fields/RouteName__c.field-meta.xml
<CustomField>
    <fullName>RouteName__c</fullName>
    <label>RouteName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>