force-app/main/default/objects/Order/fields/SenttoDetrack__c.field-meta.xml
<CustomField>
    <fullName>SenttoDetrack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SenttoDetrack</label>
    <type>Checkbox</type>
</CustomField>