force-app/main/default/objects/Order/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <formula>&apos;United Kingdom&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingCountry</label>
    <type>Text</type>
</CustomField>