force-app/main/default/objects/Order/fields/ShippingLattitude__c.field-meta.xml
<CustomField>
    <fullName>ShippingLattitude__c</fullName>
    <formula>if(Account.ShippingLatitude__c=0,Account.BillingLatitude__c,Account.ShippingLatitude__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingLattitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>