force-app/main/default/objects/Order/fields/ShippingLongitude__c.field-meta.xml
<CustomField>
    <fullName>ShippingLongitude__c</fullName>
    <formula>if(Account.ShippingLongitude__c=0,Account.BillingLongitude__c,Account.ShippingLongitude__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingLongitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>