force-app/main/default/objects/Order/fields/ShippingPostcode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostcode__c</fullName>
    <formula>Account.ShippingPostcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingPostcode</label>
    <type>Text</type>
</CustomField>