force-app/main/default/objects/Order/fields/ShippingStreetLineSingle__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreetLineSingle__c</fullName>
    <description>Street as a single line.</description>
    <formula>SUBSTITUTE(ShippingStreet, MID($Setup.LineBreak__c.Value__c, 2, 2), &apos;, &apos;)</formula>
    <label>Shipping Street Line Single</label>
    <type>Text</type>
</CustomField>