force-app/main/default/objects/Order/fields/Shopify_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Order_Id__c</fullName>
    <description>Stores shopify order ID</description>
    <label>Shopify Order Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>