force-app/main/default/objects/Order/fields/SUMMARY__c.field-meta.xml
<CustomField>
    <fullName>SUMMARY__c</fullName>
    <description>Shows recurring name if a non standard delivery/collection else it shows summary</description>
    <formula>Enqix_Order_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUMMARY - DO NOT USE</label>
    <type>Text</type>
</CustomField>