force-app/main/default/objects/Order/fields/Supplier_Form_URL_Accept_Job__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Form_URL_Accept_Job__c</fullName>
    <formula>&quot;https://thefirstmile.formtitan.com/origin/FirstMileClearanceOrder?fld29=&quot;  &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Form URL Accept Job</label>
    <type>Text</type>
</CustomField>