force-app/main/default/objects/Order/fields/Supplier_Form_URL_Quote_Required__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Form_URL_Quote_Required__c</fullName>
    <formula>&quot;https://thefirstmile.formtitan.com/origin/SupplierQuote?fld29=&quot; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Form URL Quote Required</label>
    <type>Text</type>
</CustomField>