force-app/main/default/objects/Order/fields/Supplier_Invoice_Difference__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Difference__c</fullName>
    <formula>Supplier_Invoice_Amount__c - Supplier_Price__c</formula>
    <label>Supplier Invoice Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>