force-app/main/default/objects/Order/fields/Supplier_Invoice_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Flagged__c</fullName>
    <formula>IF(TEXT(Supplier_Payment_Status__c) = &quot;Supplier Invoice Authorised&quot;, FALSE,
IF(TEXT(Supplier_Payment_Status__c) = &quot;FM to Pay&quot;, FALSE,
IF(ISNULL(Supplier_Invoice_Amount__c), FALSE,
IF(Supplier_Invoice_Difference__c = 0.00, FALSE,
IF(ISNULL(Supplier_Invoice_Difference__c), FALSE,
TRUE)))))</formula>
    <label>Supplier Invoice Flagged</label>
    <type>Checkbox</type>
</CustomField>