force-app/main/default/objects/Order/fields/Supplier_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_No__c</fullName>
    <label>Supplier Invoice No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>