force-app/main/default/objects/Order/fields/Supplier_Invoice_Query__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Query__c</fullName>
    <label>Supplier Invoice Query</label>
    <type>TextArea</type>
</CustomField>