force-app/main/default/objects/Order/fields/Supplier_Invoice_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Received_Date__c</fullName>
    <label>Supplier Invoice Received Date</label>
    <type>Date</type>
</CustomField>