force-app/main/default/objects/Order/fields/Supplier_Invoice_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Recieved__c</fullName>
    <formula>IF(
AND(ISNULL( Supplier_Invoice_Amount__c ),
ISBLANK( Supplier_Invoice_Date__c )), FALSE,
TRUE)</formula>
    <label>Supplier Invoice Recieved</label>
    <type>Checkbox</type>
</CustomField>