force-app/main/default/objects/Order/fields/Supplier_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Payment_Status__c</fullName>
    <label>Supplier Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Supplier Invoice Authorised</fullName>
            </value>
            <value>
                <fullName>FM to Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>