force-app/main/default/objects/Order/fields/Supplier_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Price__c</fullName>
    <label>Supplier Price</label>
    <summarizedField>OrderItem.Total_Supplier_Cost__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>