force-app/main/default/objects/Order/fields/Supplier_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Status__c</fullName>
    <inlineHelpText>This field is used in the Suplier App.</inlineHelpText>
    <label>Supplier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unconfirmed</fullName>
            </value>
            <value>
                <fullName>Quote Required</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Accepted by FM</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected by Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>