force-app/main/default/objects/Order/fields/syncedwithcp__c.field-meta.xml
<CustomField>
    <fullName>syncedwithcp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with CP</label>
    <type>Checkbox</type>
</CustomField>