force-app/main/default/objects/Order/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <formula>CASE(MONTH(Inv_Serv_Note_Date__c), 1, 1333760, 2, 1290320, 3, 1449952,  4, 1231254,  5, 1450443,  6, 1510112, 7, 1428380, 8, 1585990, 9, 1468848, 10, 1578361, 11, 1641997, 12, 1463591, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>