force-app/main/default/objects/Order/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <formula>IF(ISBLANK(Delivery_Date__c),   Requested_Delivery_Date__c,   Delivery_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered or Requested Date</label>
    <type>Date</type>
</CustomField>