force-app/main/default/objects/Order/fields/Time_placed__c.field-meta.xml
<CustomField>
    <fullName>Time_placed__c</fullName>
    <formula>VALUE( MID( TEXT(  CreatedDate  ), 12, 2 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time placed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>