force-app/main/default/objects/Order/fields/Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Time_Window__c</fullName>
    <defaultValue>&quot;All Day (9am - 5pm)&quot;</defaultValue>
    <inlineHelpText>This field is used in the Supplier App.</inlineHelpText>
    <label>Time Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning (9am-1pm)</fullName>
            </value>
            <value>
                <fullName>Afternoon (1pm-5pm)</fullName>
            </value>
            <value>
                <fullName>All Day (9am - 5pm)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>