force-app/main/default/objects/Order/fields/Tonnes_CO2_Saved__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved__c</fullName>
    <label>Tonnes CO2 Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>