force-app/main/default/objects/Order/fields/Total_Amount_Including_Partner__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Including_Partner__c</fullName>
    <description>Total Amount including Partner.  = (Amount ex VAT + Partner Total Amount)</description>
    <formula>Partner_Total_Amount__c +  TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Including Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>