force-app/main/default/objects/Order/fields/Total_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_KG__c</fullName>
    <formula>AD_KG__c + Recycled_KG__c + WTE_KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>