force-app/main/default/objects/Order/fields/Trees_Saved__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved__c</fullName>
    <label>Trees Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>