force-app/main/default/objects/Order/fields/Trustpilot_Email_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_Email_Trigger__c</fullName>
    <formula>AND(
Clearance_Order__c = TRUE,
AND(
NOT(ISBLANK(Contact__c )),
AND(
ISPICKVAL( Status , &quot;Invoiced&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trustpilot Email Trigger</label>
    <type>Checkbox</type>
</CustomField>