force-app/main/default/objects/Order/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(AND(Delivery_Type__c &gt; 0, Quantity__c &gt; 3), &quot;Large Non-Standard&quot;, 
IF(AND(Delivery_Type__c &gt; 0, Quantity__c &lt; 3), &quot;Small Non-Standard&quot;, &quot;Standard&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>