force-app/main/default/objects/Order/fields/Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Number__c</fullName>
    <label>Vehicle Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>