force-app/main/default/objects/Order/fields/Who_confirmed_the_Payment__c.field-meta.xml
<CustomField>
    <fullName>Who_confirmed_the_Payment__c</fullName>
    <label>Who confirmed the Payment?</label>
    <type>TextArea</type>
</CustomField>