force-app/main/default/objects/Order/validationRules/DetrackStatusEqualInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>DetrackStatusEqualInProgress</fullName>
    <active>false</active>
    <description>Do not allow edits to orders or order products if the order is out for delivery</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Detrack_Status__c),&apos;In Progress&apos;), $User.Username 
&lt;&gt; 
&apos;integration@thefirstmile.co.uk&apos;,
$User.Username 
&lt;&gt;  
&apos;customer.portal@thefirstmile.co.uk.integrate&apos;)</errorConditionFormula>
    <errorMessage>You cannot edit this order because the Detrack Status is &apos;In Progress&apos;</errorMessage>
</ValidationRule>