force-app/main/default/objects/Order/validationRules/PO_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Required</fullName>
    <active>true</active>
    <description>Account associated to this order requires a PO Number.</description>
    <errorConditionFormula>ISBLANK(PO_Number__c) &amp;&amp; Order_Account_ID__r.PO_Required__c</errorConditionFormula>
    <errorMessage>Check if PO is added if it&apos;s required.</errorMessage>
</ValidationRule>