force-app/main/default/objects/Order/validationRules/RestrictAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(), ISBLANK(Original_Invoice_to_Credit__c),
  OR(
    AND(Account.RecordType.DeveloperName != &apos;Prospect&apos;, Account.RecordType.DeveloperName != &apos;Location&apos;),
    AND(Account.RecordType.DeveloperName = &apos;Location&apos;, NOT(ISPICKVAL(Account.Enqix_Dead_Live__c, &apos;Live&apos;)))
  )
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Only prospects and live locations are allowed to order.</errorMessage>
</ValidationRule>