force-app/main/default/objects/Order/validationRules/RestrictAccountOnCreditNote.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictAccountOnCreditNote</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(), NOT(ISBLANK(Original_Invoice_to_Credit__c)),
    OR(Account.RecordType.DeveloperName = &apos;Prospect&apos;, Account.RecordType.DeveloperName = &apos;Account&apos;, Account.RecordType.DeveloperName = &apos;Estate&apos;, NOT(ISPICKVAL(Account.Enqix_Dead_Live__c, &apos;Live&apos;)))
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Credit note allowed only on live location or partner.</errorMessage>
</ValidationRule>