force-app/main/default/objects/Order/validationRules/RestrictCreditNoteCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCreditNoteCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Original_Invoice_to_Credit__c)), ISNEW(), ISBLANK(Original_Invoice_to_Credit__r.BusinessCentralId__c))</errorConditionFormula>
    <errorMessage>Credit note is not allowed as Original Invoice has not been sent to Business Central.</errorMessage>
</ValidationRule>